--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,7 @@ version: '3'
 services:
   web:
     build: .
-    #command: sh -c "python manage.py runserver 0.0.0.0:8000"
-    command: tail -f /dev/null
+    command: sh -c "python manage.py test && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/app
     ports:
